--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@types/google.maps": "^3.54.7",
     "file-saver": "^2.0.5",
-    "libphonenumber-js": "^1.10.49",
+    "libphonenumber-js": "^1.11.1",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ngx-mat-input-tel": "^17.3.0",
     "ngx-mat-intl-tel-input": "^5.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
