--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@iplab/ngx-file-upload": "^16.0.2",
     "@types/google.maps": "^3.54.7",
     "file-saver": "^2.0.5",
     "libphonenumber-js": "^1.11.1",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ngx-editor": "^16.0.1",
     "ngx-mat-input-tel": "^17.3.0",
     "ngx-mat-intl-tel-input": "^5.0.0",
     "rxjs": "~7.8.0",
@@ -39,6 +41,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
+    "@types/quill": "^2.0.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -46,5 +49,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
+  },
+  "resolutions": {
+    "prosemirror-model": "1.19.3"
   }
 }
